--- a/index.html
+++ b/index.html
@@ -1,30 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assests/css/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assests/css/bootstrap.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
-</head>
+    <title>CONVERSION FLOW</title>
+  </head>
 
-<body>
+  <body>
     <header>
+      <nav>
+        <div>
+          <h1>CONVERSION <span> FLOW </span></h1>
+        </div>
+        <div>
+          <ul>
+            <li><a href=""> Our Work </a></li>
+            <li><a href=""> How We Help </a></li>
+            <li><a href=""> Pricing </a></li>
+            <li><a href=""> Why Us </a></li>
+            <li><a href=""> Why Webflow </a></li>
+          </ul>
+        </div>
+      </nav>
     </header>
 
     <main>
+      <section>
+        <div>
+          <h1><span> Webflow Websites </span></h1>
+          <h1><span> For Fast-Moving </span></h1>
+          <h1><span> SaaS Companies. </span></h1>
+          <p><i class="fas fa-award"></i> Webflow certified developers</p>
+          <p><i class="fas fa-trophy"></i> 4 years of experience helping SaaS companies</p>
+          <p><i class="fas fa-star"></i> Let your design/dev team focus on your product</p>
+          <button>Get Started Now</button>
+          <button>See Our Work</button>
+        </div>
+        <div>
+            <div>
+                <div>
+                    <div>
+                        <div>
+                            <div>
+                                <img src="" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <p> Trusted by high-growth startups and investors </p>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+      </section>
     </main>
 
-    <footer>
-    </footer>
-
+    <footer></footer>
 
     <script src="assets/js/bootstrap.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-
+  </body>
 </html>
