Added Commment Text on the Index.html tags for easy understanding

--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
 
   <body>
     <header>
+        <!--------------------------------- HEADER NAV MENU STARTS HERE ------------------------------------->
       <nav>
+          <!-- HEADER LOGO TEXT STARTS HERE -->
         <div>
           <h1>CONVERSION <span> FLOW </span></h1>
         </div>
+        <!-- HEADER LOGO TEXT ENDS HERE-->
+
+        <!-- HEADER MENU NAV LINKS STARTS HERE -->
         <div>
           <ul>
             <li><a href=""> Our Work </a></li>
@@ -30,11 +35,15 @@
             <li><a href=""> Why Webflow </a></li>
           </ul>
         </div>
+        <!-- HEADER MENU NAV LINKS ENDS HERE -->
       </nav>
+      <!--------------------------------- HEADER NAV MENU ENDS HERE ------------------------------------->
     </header>
 
     <main>
+        <!--------------------------------- HERO SECTION STARTS HERE ------------------------------------->
       <section>
+          <!-- HERO SECTION TEXT STARTS HERE -->
         <div>
           <h1><span> Webflow Websites </span></h1>
           <h1><span> For Fast-Moving </span></h1>
@@ -45,6 +54,9 @@
           <button>Get Started Now</button>
           <button>See Our Work</button>
         </div>
+        <!-- HERO SECTION TEXT ENDS HERE -->
+
+        <!-- HERO SECTION RIGHT LAPTOP MOCKUP IMAGE STARTS HERE -->
         <div>
             <div>
                 <div>
@@ -58,6 +70,9 @@
                 </div>
             </div>
         </div>
+        <!-- HERO SECTION RIGHT LAPTOP MOCKUP IMAGE ENDS HERE -->
+
+        <!-- HERO SECTION RIGHT (TRUSTED BY BRANDS)LOGO STARTS HERE -->
         <div>
             <p> Trusted by high-growth startups and investors </p>
             <img src="" alt="">
@@ -66,8 +81,10 @@
             <img src="" alt="">
             <img src="" alt="">
         </div>
-
+        <!-- HERO SECTION RIGHT (TRUSTED BY BRANDS)LOGO ENDS HERE -->
+        
       </section>
+      <!--------------------------------- HERO SECTION ENDS HERE ------------------------------------->
     </main>
 
     <footer></footer>
